Another Small Changes

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Pulse!</title>
 </head>
 <body>
-<h1> Helllo World. This is great.</h1>
+<h1> Helllo World. This is great. I love this!</h1>
 </body>
 </html>
